fix text for git

--- a/impl.ipynb
+++ b/impl.ipynb
@@ -138,7 +138,7 @@
     "                opt.zero_grad()\n",
     "                loss.backward()\n",
     "                opt.step()\n",
-    "        self.est_c()\n",
+    "        self.est_c(mode)\n",
     "        \n",
     "        \n",
     "    def est_h(self, h):\n",
@@ -185,17 +185,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def test():\n",
+    "def test(git=False):\n",
     "    clas = Classifier(hd=228)\n",
     "    clas.train(X, s)\n",
     "    X_test, y_test, _ = generate_dataset(True, 500)\n",
-    "    cs = [r'Приближение:\\quad c\\sim\\frac 1n \\sum\\limits_{x\\in P} g(x)', \n",
-    "          r'Приближение:\\quad c\\sim \\sum\\limits_{x\\in P} g(x) / \\sum\\limits_{x\\in V} g(x)', \n",
-    "          r'Приближение:\\quad c\\sim \\max_{x\\in V} g(x)']\n",
+    "    if git:\n",
+    "        cs = ['c~mean_P(g(x))', \n",
+    "              r'c~sum_P(g(x))/sum_V(g(x))', \n",
+    "              r'c~max_V(g(x))']\n",
+    "    else:\n",
+    "        cs = [r'Приближение:\\quad c\\sim\\frac 1n \\sum\\limits_{x\\in P} g(x)', \n",
+    "              r'Приближение:\\quad c\\sim \\sum\\limits_{x\\in P} g(x) / \\sum\\limits_{x\\in V} g(x)', \n",
+    "              r'Приближение:\\quad c\\sim \\max_{x\\in V} g(x)']\n",
     "    \n",
     "    for i, c in enumerate(cs):\n",
     "        clas.est_c(i)\n",
@@ -207,8 +212,45 @@
     "        recall = TP / (TP + TN)\n",
     "        precision = TP / (TP + FP)\n",
     "        accuracy = (TP + FN) / len(y_test)\n",
-    "        display(Math(c))\n",
-    "        print(\"recall = {}\\nprecision = {}\\naccuracy = {}\\nE(h)={}\".format(recall, precision, accuracy, clas.est_h(h)))"
+    "        if git:\n",
+    "            print(c)\n",
+    "        else:\n",
+    "            display(Math(c))\n",
+    "        print(\"recall = {}\\nprecision = {}\\naccuracy = {}\\nE(h)={}\\n\".format(recall, precision, accuracy, clas.est_h(h)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c~mean_P(g(x))\n",
+      "recall = 0.9919999837875366\n",
+      "precision = 0.9959839582443237\n",
+      "accuracy = 0.994\n",
+      "E(h)=0.5271461606025696\n",
+      "\n",
+      "c~sum_P(g(x))/sum_V(g(x))\n",
+      "recall = 0.9919999837875366\n",
+      "precision = 0.9959839582443237\n",
+      "accuracy = 0.994\n",
+      "E(h)=0.5093637108802795\n",
+      "\n",
+      "c~max_V(g(x))\n",
+      "recall = 0.9480000138282776\n",
+      "precision = 1.0\n",
+      "accuracy = 0.974\n",
+      "E(h)=0.3962695300579071\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "test(git=True)"
    ]
   },
   {
